# c_plan

./: .gitignore  CMakeLists.txt
src/a/: core_begin.cpp  core_begin_0.cpp  core_begin_win.cpp
src/b/b1/: b1.cpp  cmd.cpp  cmd.h  game.h  ui.h
src/c/: c1.cpp  c2.cpp  c3.cpp  cc1.cpp
src/f/f1/: f1.cpp
src/f/f1/fw/: core.cpp  core.h  delegate.h  fw.cpp  fw.h
src/f/f1/game/: game.cpp  game.h
